# taskmaster

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  check_db_connectivity.sh
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_tasks.sql  20250820000003_create_notifications.sql
backend/src/: lib.rs  main.rs
backend/src/database/: connection.rs
backend/src/handlers/: auth.rs  mod.rs  notifications.rs  stats.rs  tasks.rs
backend/src/middleware/: auth.rs
backend/src/models/: mod.rs  notification.rs  task.rs  user.rs
backend/src/services/: mod.rs  notification_service.rs  scheduler.rs
backend/src/utils/: jwt.rs  mod.rs  response.rs  validation.rs
backend/tests/: auth_login_me_test.rs  auth_register_test.rs  models_notification_test.rs  models_task_test.rs  models_user_test.rs  services_notification_service_test.rs  services_scheduler_test.rs  stats_notifications_health_test.rs  tasks_handlers_test.rs  utils_jwt_test.rs  utils_response_test.rs  utils_validation_test.rs
database/: seed_data.sql
frontend/: .env.example  TESTING.md  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
frontend/src/components/: ProtectedRoute.tsx
frontend/src/components/Layout/: DashboardLayout.tsx  Header.tsx  Layout.tsx  NewDashboardLayout.tsx  Sidebar.tsx  TopNavbar.tsx
frontend/src/components/Tasks/: LocalFilters.tsx  QueryFilters.tsx  TaskCard.tsx  TaskFilters.tsx  TaskForm.tsx  TaskGroupView.tsx  TaskKanbanView.tsx  TaskList.tsx  TaskListView.tsx  (+2 more)
frontend/src/contexts/: AuthContext.tsx  NotificationContext.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/lib/: queryClient.ts
frontend/src/pages/: AnalyticsPage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  TasksPage.tsx
frontend/src/services/: api.integration.test.ts  api.ts  auth.integration.test.ts  auth.ts  notifications.integration.test.ts  notifications.ts  stats.integration.test.ts  stats.ts  tasks.integration.test.ts  tasks.ts
frontend/src/styles/: components.css  dashboard-layout.css  design-system.css  fix-sidebar-collapse.css  layout.css  pages.css  tasks.css
frontend/src/test/: README.md  integration.setup.ts  integration.test.ts  setup.ts  utils.tsx
frontend/src/types/: index.ts
(+10 files in other folders)
